Add remote cfg files

--- a/boinc/Dockerfile
+++ b/boinc/Dockerfile
@@ -3,8 +3,11 @@ MAINTAINER trurl rick.hughes@pobox.com
 
 RUN apt-get update
 RUN DEBIAN_FRONTEND=noninteractive apt-get install -y boinc-client
-#RUN mkdir /var/lib/boinc-client/slots
 
 USER boinc
 WORKDIR /var/lib/boinc-client
+
+ADD remote_hosts.cfg /var/lib/boinc-client/remote_hosts.cfg
+ADD gui_rpc_auth.cfg /var/lib/boinc-client/gui_rpc_auth.cfg
+
 ENTRYPOINT ["boinc"]
